[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/HUD/HealthBar/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://UI/HUD/ManaBar/ManaBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/coin/icon.png" type="Texture" id=4]
[ext_resource path="res://Fonts/unlearn2.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/HUD/DashBar/DashBar.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.7
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0 ]
}

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_left = 25.0
margin_top = 25.0
margin_right = 25.0
margin_bottom = 25.0

[node name="ManaBar" parent="." instance=ExtResource( 3 )]
margin_left = 26.0
margin_top = 78.0
margin_right = 26.0
margin_bottom = 78.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="."]
margin_left = 308.0
margin_top = 78.0
margin_right = 348.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 290, 95 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
hframes = 14

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="DashBar" parent="." instance=ExtResource( 6 )]
margin_left = 16.0
margin_top = 93.0
margin_right = -872.0
margin_bottom = -427.0
